# davinci3-wiki

./: .cursorrules  .gitignore  Cargo.toml  README.md  README_devin.cursorrules.md  action_plan.md  commit_msg.txt  download_dump.py  improvement_plan.md  package-lock.json  remaining_tasks.md  requirements.in  requirements.txt  test.xml
.cursor/rules/: davinci3rules.mdc
docs/: api_documentation.md  architecture_diagram.html  developer_guide.md  testing_guide.md  user_manual.md
docs/implementation_reports/: frontend_error_handling.md
src/: lib.rs  main.rs
src/api/: error_handler.rs  mod.rs  rate_limiter.rs  rate_limiter_test.rs  validation.rs
src/db/: manager.rs  mod.rs  parallel.rs  reader.rs  schema.rs  tests.rs  writer.rs
src/error_handling/: error.rs  logging.rs  mod.rs
src/image/: mod.rs
src/installer/: mod.rs
src/llm/: mod.rs
src/parser/: mod.rs  models.rs  text.rs  xml.rs
src/vector/: mod.rs
tests/: api_test.rs  db_test.rs  e2e_test.rs  installer_test.rs  llm_test.rs  parser_test.rs  performance_test.rs  vector_test.rs
tests/common/: mock_data.rs  mod.rs  test_helpers.rs
tools/: profile_web_scraper.py  web_scraper.py  web_scraper_benchmark.py  web_scraper_error_test.py
ui/: README.md  pubspec.yaml
ui/lib/: main.dart
ui/lib/models/: article.dart  search_result.dart  settings.dart  settings.freezed.dart  settings.g.dart
ui/lib/pages/: article_details_page.dart  articles_page.dart  search_page.dart  settings_page.dart
ui/lib/providers/: connectivity_provider.dart
ui/lib/services/: api_error_handler.dart  cache_service.dart  connectivity_service.dart  search_history_service.dart  settings_service.dart  wiki_service.dart
ui/lib/test/: article_details_page_test.dart  error_display_widget_test.dart  loading_state_widget_test.dart  network_aware_widget_test.dart  search_page_test.dart
ui/lib/widgets/: article_card.dart  error_display_widget.dart  error_logs_panel.dart  loading_state_widget.dart  network_aware_widget.dart  performance_metrics_panel.dart  search_result_card.dart  settings_panel.dart
ui/test/: article_details_page_test.dart  articles_page_test.dart  error_handling_integration_test.dart  error_handling_test.dart  home_page_test.dart  offline_mode_test.dart  performance_metrics_test.dart  search_page_test.dart  settings_page_test.dart  widget_test.dart
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
